syntax = "proto3";

option csharp_namespace = "GrpcClient";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  // Unary :   Single Request  :  Single Response
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SayBye(EmptyModel) returns (ByeReply);
}

// SayBye :   Doenst accept anything but returns string message
message EmptyModel{

}
message ByeReply
{
	string reply=1;
}


// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
